--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@web3uikit/core": "^0.1.12",
     "@web3uikit/icons": "^0.1.12",
     "@web3uikit/web3": "^0.1.9",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.12",
     "moralis": "^1.8.0",
     "next": "12.1.5",
     "react": "18.0.0",
@@ -20,10 +22,10 @@
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
